--- a/SuryaGallery/res/layout/activity_home.xml
+++ b/SuryaGallery/res/layout/activity_home.xml
@@ -27,21 +27,11 @@
 		android:layout_alignParentRight="true"
 		android:layout_alignParentTop="true" />
 
-	<GridView
-	    android:id="@+id/gridView"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:layout_alignParentLeft="true"
+	<ru.truba.touchgallery.GalleryWidget.GalleryViewPager 
+	    android:id="@+id/galleryPager"
+	    android:layout_width="match_parent" 
+	    android:layout_height="match_parent"
 	    android:layout_below="@+id/refreshButton"
-	    android:numColumns="2" >
-	</GridView>
-
-	<ProgressBar
-	    android:id="@+id/imageProgressBar"
-	    style="?android:attr/progressBarStyleLarge"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_centerHorizontal="true"
-	    android:layout_centerVertical="true" />
+	    android:background="#444444" />
 
 </RelativeLayout>
